--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,15 +1,27 @@
 {
-  "manifest_version": 1,
+  "manifest_version": 3,
   "name": "Door Open Chrome Extension",
   "version": "1.0",
   "description": "A simple chrome extension",
   "browser_action": {
     "default_popup": "index.html",
     "default_icon": {
-      "16": "logo16.png",
-      "48": "logo48.png",
-      "128": "logo128.png"
+      "16": "./logo192.png",
+      "48": "./logo192.png",
+      "128": "./logo192.png"
     }
   },
-  "permissions": []
+  "icons": {
+    "16": "./logo192.png",
+    "48": "./logo192.png",
+    "128": "./logo192.png"
+  },
+  "permissions": ["activeTab", "storage", "<all_urls>"],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content_scripts/index.js"],
+      "run_at": "document_end"
+    }
+  ]
 }
